# maus_dash

./: CLAUDE.md  README.md  claude_summary.md  continuation_prompt.md  pyproject.toml  pytest.ini  run_tests.py
backend/: main.py  setup.sh
backend/core/: event_bus.py  module_loader.py  websocket_manager.py  worker_manager.py
backend/modules/cli_executor/: commands.json  module.py
backend/modules/system_info/: module.py
docs/: notes.md  structure.md
frontend/: index.html  package-lock.json  package.json  setup.sh  setup_guide.md  tailwind.config.js  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: ConnectionStatus.vue  InfoRow.vue  MetricCard.vue  StatCard.vue
frontend/src/components/modules/: MetricsModule.vue  ModulesModule.vue  SystemInfoModule.vue  WorkersModule.vue
frontend/src/services/: moduleService.js
frontend/src/stores/: dashboard.js  websocket.js
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_module_lifecycle.py
tests/unit/core/: test_base_module.py  test_module_loader.py
